# Coordinated

./: .eslintrc.js  .prettierrc.js  index.html  package.json
src/: App.tsx  featherIcons.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  pool.rs  slaap.rs
src/components/: Text.tsx
src/components/sidebar/: MenuItem.tsx  Sidebar.tsx  SidebarHeader.tsx  index.ts
src/theme/: colors.ts  fonts.ts
